--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.4.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@mui/lab": "^5.0.0-alpha.49",
+    "@mui/material": "^5.0.2",
+    "axios": "^0.22.0",
+    "clsx": "^1.1.1",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
